maint(tmux): config for neovim image plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,8 +16,10 @@ set-option -g renumber-windows on
 
 # Change prefix key to C-a, easier to type, same to "screen"
 # unbind C-b
-set -g prefix C-a
 set -g prefix C-b
+bind C-b send-prefix
+set -g prefix2 C-a
+bind C-a send-prefix -2
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
@@ -139,7 +141,12 @@ bind M if -F '#{monitor-silence}' \
     'command-prompt -p "Monitor silence: interval (s)" "setw monitor-silence %%"'
 
 # Activity bell and whistles
-set -g visual-activity on
+# Putting off to automatically hide/show images in tmux
+set -g visual-activity off
+
+# https://github.com/3rd/image.nvim/?tab=readme-ov-file#tmux
+# This is needed by the image.nvim plugin
+set -gq allow-passthrough on
 
 # TODO: Does not work as well, check on newer versions
 # set -g visual-silence on
@@ -280,7 +287,8 @@ wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+# set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_battery #{online_status}"
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
